# labs_OP

./: 1.cpp  CMakeLists.txt  lab1.cpp  lab1_header.h  lab2.1.cpp  lab2.2.cpp  lab2_header.h  lab3.1.cpp  lab3.2.cpp  lab3_header.h  lab4.1.cpp  lab4.2.cpp  lab4_header.h
