cmake_minimum_required(VERSION 3.26)
project(labs_OP)

set(CMAKE_CXX_STANDARD 23)

add_executable(labs_OP_1 lab1.1.cpp
        lab1.2.cpp
        lab1_header.h)

add_executable(labs_OP_2 lab2.1.cpp
        lab2.2.cpp
        lab2_header.h)

add_executable(labs_OP_3 lab3.1.cpp
        lab3.2.cpp
        lab3_header.h)

add_executable(labs_OP_4 lab4.1.cpp
        lab4_header.h
        lab4.2.cpp)